Add default implementation for TimePassed